@@ -1,12 +1,21 @@
 {
-  "timestamp" : "2024-09-15T01:16:10Z",
+  "timestamp" : "2024-09-16T00:41:39Z",
   "count_outdated" : 84,
   "uniques_outdated" : 66,
-  "count" : 85,
-  "uniques" : 67,
+  "count" : 86,
+  "uniques" : 68,
   "clones" : [
     {
       "timestamp": "2024-09-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-15T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
